add csi-addons sidecar
This commit adds csi-addons to odf-operator

Signed-off-by: yati1998 <ypadia@redhat.com>

--- a/bundle/manifests/odf-operator-manager-config_v1_configmap.yaml
+++ b/bundle/manifests/odf-operator-manager-config_v1_configmap.yaml
@@ -1,5 +1,11 @@
 apiVersion: v1
 data:
+  CSI_ADDONS_SUBSCRIPTION_CATALOGSOURCE: odf-catalogsource
+  CSI_ADDONS_SUBSCRIPTION_CATALOGSOURCE_NAMESPACE: openshift-storage
+  CSI_ADDONS_SUBSCRIPTION_CHANNEL: alpha
+  CSI_ADDONS_SUBSCRIPTION_NAME: csi-addons
+  CSI_ADDONS_SUBSCRIPTION_PACKAGE: csi-addons
+  CSI_ADDONS_SUBSCRIPTION_STARTINGCSV: csi-addons.latest
   IBM_CSI_SUBSCRIPTION_STARTINGCSV: ibm-block-csi-operator.v1.6.0
   IBM_SUBSCRIPTION_CATALOGSOURCE: odf-catalogsource
   IBM_SUBSCRIPTION_CATALOGSOURCE_NAMESPACE: openshift-storage
