--- a/config/manager/manager.env
+++ b/config/manager/manager.env
@@ -7,6 +7,12 @@ NOOBAA_SUBSCRIPTION_CHANNEL=alpha
 NOOBAA_SUBSCRIPTION_STARTINGCSV=noobaa-operator.v5.9.0
 NOOBAA_SUBSCRIPTION_CATALOGSOURCE=odf-catalogsource
 NOOBAA_SUBSCRIPTION_CATALOGSOURCE_NAMESPACE=openshift-storage
+CSI_ADDONS_SUBSCRIPTION_CATALOGSOURCE=odf-catalogsource
+CSI_ADDONS_SUBSCRIPTION_CATALOGSOURCE_NAMESPACE=openshift-storage
+CSI_ADDONS_SUBSCRIPTION_CHANNEL=alpha
+CSI_ADDONS_SUBSCRIPTION_NAME=csi-addons
+CSI_ADDONS_SUBSCRIPTION_PACKAGE=csi-addons
+CSI_ADDONS_SUBSCRIPTION_STARTINGCSV=csi-addons.latest
 OCS_SUBSCRIPTION_NAME=ocs-operator
 OCS_SUBSCRIPTION_PACKAGE=ocs-operator
 OCS_SUBSCRIPTION_CHANNEL=alpha
