--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -14,5 +14,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/ocs-dev/odf-operator
-  newTag: latest
+  newName: quay.io/ypadia/odf-operator
+  newTag: test
